# CourseScheduleGenerator

./: README.md  courseSelector.py  data.py  demoGUI.py  overlappingTimes.test.py  pyproject.toml  requirements.txt  scheduleGenerator.py
tests/: test_other.py  test_overlapping_times.py  tests.py
