[tool.poetry]
name = "courseschedulegenerator"
version = "0.1.0"
description = ""
authors = ["Jahirul Islam <jahir.ewubd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
